--- a/src/modules/better-maps/styles/hunters.css
+++ b/src/modules/better-maps/styles/hunters.css
@@ -178,7 +178,6 @@ span.treasureMapView-shareLinkInputStatus {
 }
 
 .treasureMapView-hunter-wrapper.mousehuntTooltipParent {
-  padding-top: 20px;
   margin-top: -10px;
 }
 
